# wood-defect-detection

./: .gitignore
yolo-grpc/: Cargo.toml  README.md  build.rs  requirements.txt
yolo-grpc/proto/: yolo.proto
yolo-grpc/py_yolo/: client.py  yolo_pb2.py  yolo_pb2.pyi  yolo_pb2_grpc.py
yolo-grpc/src/: client.rs  server.rs
yolov5-train/: .gitignore
yolov5-train/data/: wood-surface-defects.yaml
