[package]
name = "yolo-grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = 'yolo-server'
path = 'src/server.rs'

[[bin]]
name = 'yolo-client'
path = 'src/client.rs'

[dependencies]
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"

async-stream = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"
onnxruntime = "0.0.14"
image = { version = "0.24.7", features = ["jpeg", "rgb", "png"] }

[build-dependencies]
tonic-build = "0.9"
